css/style.css
* {
    font-family: "Helvetica", "Arial";
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

header {
    font-size: large;
}
main {
    font-size: larger;
    margin-top: 50px;
}
footer {
    font-size: small;
}


/* Nav bar styles ON */
.menu {
    list-style-type: none;
    border: none;
    font-size: 16px;
}

.nav{
    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
    border: none;

    background-color: #f8f8f8;

    position: fixed;
    top: 0;
    width: 100%;

    line-height: 30px;
    max-height: 340px;
}

#nav li{
  float:left;
}

#nav a {
    color: #777;
    display: block;
    text-decoration: none;
    padding: 14px 16px;
}

#nav a:hover {
    color: #121212;
}

#nav .current a {
    font-weight: bolder;
    color: black;
    background-color: #dddddd;
}

/* Nav bar styles OFF */

.father {
  display:flex;
  justify-content: space-around;
  align-items: center;
  margin-left: 25px;
  margin-right: 25px;
  height: 768px;
  padding: 10px;
}

.son {
  padding:10px;
  width: 75%;
}

.img {
    margin: 0;
}

.rss {
    margin: 0;
}

/* FX */

.father:nth-child(even) .son{
  order:2;
}

